[package]
name = "asana"
version = "1.0.0"
authors = ["Universemul <davidbarthelemy28@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
clap = "2.33.0"
chrono = "0.4.10"
api = {path = "api"}

[workspace]
members = [
    "api",
]